# trinity

./: .gitignore  README.org  algebraofalgebra.org  chart.org  haskell-effects.org  kleisli.org  notes.org  plt-101.org  story-of-effects.org  summary.org
examples/: LICENSE  examples.cabal
examples/app/: Main.lhs
examples/src/Examples/: Arrows.hs  Arrows.org  Category.hs  DTALC.hs  DTALC.org  Free.hs  Free.org  FreeA.org  Monoids.hs  Monoids.org  Tagless.hs  Tagless.org
examples/src/Examples/Category/: Hask.hs
exercises/attott/: CHANGELOG.md  LICENSE  README.org  attott.cabal
exercises/attott/exe/: Main.hs
exercises/attott/src/TT/: Equality.hs  Eval.hs  Semantics.hs  Syntax.hs
papers/: citations.bib
proof/: hello-world-proof.agda
