cabal-version:      3.4
name:               examples
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Simon Beaumont
maintainer:         datalligator@icloud.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Examples.DTALC
                    , Examples.Tagless
                    , Examples.Free
                    , Examples.Category
                    , Examples.Category.Hask
                    , Examples.Monoids
                    , Examples.Arrows
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   src
    default-language: GHC2021

executable examples
    import:           warnings
    main-is:          Main.lhs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        examples

    hs-source-dirs:   app
    default-language: GHC2021

test-suite examples-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.lhs
    build-depends:
        base ^>=4.17.0.0,
        examples
