cabal-version:   3.4
name:            attott
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Simon Beaumont
maintainer:      datalligator@icloud.com
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  TT.Syntax
                    , TT.Semantics
                    , TT.Eval
                    , TT.Equality
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   src
    default-language: GHC2021

executable attott
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        attott

    hs-source-dirs:   exe
    default-language: GHC2021

test-suite attott-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tst
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        attott
